--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tiptap/pm": "^2.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "outstatic": "^1.4.9",
+    "prosemirror-dropcursor": "^1.8.1",
+    "prosemirror-gapcursor": "^1.3.2",
+    "prosemirror-history": "^1.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
