--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
-    "outstatic": "^1.4.9",
+    "outstatic": "0.0.41",
     "prosemirror-dropcursor": "^1.8.1",
     "prosemirror-gapcursor": "^1.3.2",
     "prosemirror-history": "^1.4.0",
